# exif-rename

./: README.md  requirements.txt  setup.cfg
src/exif_rename/: list_tags.py  main.py  parser.py  renamer.py
tests/unit_tests/: conftest.py  test_list_tags.py  test_parser.py  test_renamer.py
