[metadata]
name = exif_rename
version = 1.0.0
author = Micha Schöll
author_email = mschoell@gmx.com
description = An EXIF based file renamer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michascholl/exif-rename

[options]
package_dir =
    =src
packages =
    exif_rename
install_requires =
    click
    exifread
setup_requires =
    pytest-runner
tests_require =
    pytest
scripts =
    bin/exif-rename
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[aliases]
test=pytest
